# teegee

Assets/: .gitignore
Assets/ChiliMilkToonShader/RenderFeature/: RenderFrontHairShadowMaskFeature.cs
Assets/Controls/: InputActions.inputactions
Assets/Fonts/SourceCodePro/: SourceCodePro.asset
Assets/Models/: Active.anim  Inactive.anim  Interactable.blend1  Interactable.mat  InteractableMesh.controller  PointIndicator.blend  Room1.blend  Room1.blend1  Room1Floor.mat
Assets/Models/InteractionIndicator/: PointIndicator.blend1
Assets/Resources/: UnityGLTFSettings.asset
Assets/Scenes/: Game.unity  Lighting.lighting  SampleScene.unity
Assets/URP/: URP Renderer.asset  URP.asset
ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  ProjectSettings.asset  QualitySettings.asset  TagManager.asset
terminal-client/: Cargo.toml
terminal-client/client/: Cargo.toml
terminal-client/client/src/: main.rs  rcmut.rs  util.rs
terminal-client/client/src/g/: computer.rs  fs.rs  mod.rs
terminal-client/client/src/g/subprocess/: fs.rs  mod.rs  myhealth.rs  sparkx.rs  sys.rs
terminal-client/client/src/g/subprocess/fs/: cat.rs  cd.rs  ls.rs  mod.rs
terminal-client/client/src/g/subprocess/sys/: clear.rs  cmd.rs  help.rs  logout.rs  mod.rs  ssh.rs  which.rs
terminal-client/client/src/ipc/: mod.rs  msg.rs
terminal-client/client/src/log/: mod.rs
terminal-client/client/src/os/: mod.rs
terminal-client/client/src/pinpad/: mod.rs
terminal-client/client/src/rl/: password.rs
terminal-client/client/src/tui/: md.rs
terminal-client/src/: main.rs
(+117 files in other folders)
