[package]
name = "terminal-client"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy_reflect = "0.14.0"
bitmask = "0.5.0"
chrono = "0.4.38"
crossterm = "0.27"
dateparser = "0.2.1"
dirs = "5.0.1"
num-derive = "0.4.2"
num-traits = "0.2.19"
ratatui = "0.26.3"
ron = "0.8.1"
serde = "1.0.204"

[dependencies.windows]
version = "0.57.0"
features = [
	"Win32_System_Console",
	"Win32_UI_WindowsAndMessaging",
	"Win32_Storage_FileSystem",
	"Win32_Security",
	"Win32_System_Pipes"
]
